--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,7 @@ html {
     will-change: opacity;
 }
 
-/* Prevent FOUC - elements start invisible */
-section:not(.fade-in),
-.card-hover:not(.fade-in) {
-    opacity: 0;
-}
+/* Removed opacity: 0 default state to prevent CLS - fade-in animation is optional */
 
 /* Code Blocks */
 code {
